# agentic-dev-maestro

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLANO_FERRAMENTAS.md  PLANO_FERRAMENTAS.ptbr.md  README.md  README.ptbr.md  TODO.md  TODO.ptbr.md  docker-compose.yml  opencode.jsonc
local-client/: .gitignore  CLAUDE.md  README.md  README.ptbr.md  install.ps1  install.sh  pyproject.toml  reuniao-20260716-1610.md  run-web.sh  run.ps1  run.sh
local-client/docs/: PLANO_ASSISTENTE_REUNIAO.md  PLANO_ASSISTENTE_REUNIAO.ptbr.md
local-client/docs/samples/: reuniao-exemplo-plano-maestro-transcricao-crua.txt  reuniao-exemplo-plano-maestro.txt
local-client/maestro_local/: __main__.py  autostart.py  coach.py  codereview.py  config.py  desktop_shell.py  digest.py  english.py  gittools.py  i18n.py  i18n_catalog.py  kb.py  memory.py  translate.py  triage.py  webmain.py
local-client/maestro_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
local-client/maestro_local/ai/: agent.py  llm.py  providers.py  tools.py
local-client/maestro_local/api/: app.py  server.py
local-client/maestro_local/cronista/: assistants.py  audio.py  constants.py  hotkeys.py  prompts.py  summarizer.py  transcriber.py
local-client/maestro_local/db/: models.py
local-client/maestro_local/gui/: coach_widget.py  confirm_switch.py  flow_layout.py  main_window.py  no_wheel_combo.py  theme.py  workspace_selector.py
local-client/maestro_local/gui/meetings/: __init__.py  destination_bar.py  history_panel.py  live_panel.py  preparation_card.py  recording_card.py  result_card.py  section_card.py
local-client/maestro_local/gui/views/: api_tester_view.py  board_view.py  chat_view.py  cronista_view.py  daily_view.py  dashboard_view.py  english_view.py  (+16 more)
local-client/maestro_local/skills/: catalog.py
local-client/maestro_local/study/: assistant.py  ingest.py
local-client/maestro_local/transcricoes/: agent_service.py  assistants.py  audio.py  constants.py  hotkeys.py  live_assistant.py  markdown_gen.py  prompts.py  repository.py  session.py  summarizer.py  transcriber.py
local-client/maestro_local/vault/: manager.py
local-client/scripts/: gen_screenshots.py
local-client/tests/: conftest.py  test_agent_service.py  test_i18n_catalog.py  test_meeting_session.py  test_meetings_flow.py  test_memory.py  test_repository.py
local-client/webui/: index.html  package-lock.json  package.json  vite.config.js
local-client/webui/public/: manifest.webmanifest  sw.js
local-client/webui/src/: App.jsx  api.js  i18n.js  i18n_catalog.js  main.jsx  styles.css  theme.js
(+420 files in other folders)
