[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro-local"
version = "0.1.0"
description = "Agentic Dev Maestro — cliente desktop local para organização de tarefas e facilitação do ciclo de desenvolvimento"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.26",
    "faster-whisper>=1.0",
    "pynput>=1.7",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "pykeepass>=4.0",
]

[project.optional-dependencies]
# Shell de desktop que renderiza a web UI React numa janela nativa
# (migração para a rota web — ver docs/planos/migracao-frontend-responsivo).
shell = ["pywebview>=5.0"]

[project.scripts]
maestro = "maestro_local.__main__:main"
maestro-shell = "maestro_local.desktop_shell:main"

[tool.setuptools.packages.find]
include = ["maestro_local*"]
